# enterprise_qa_platform_py

./: LearningAndFixing_Issues.md  README.md  pyproject.toml
configs/: default.yaml  dev.yaml  locator_config.yaml
src/framework/adapters/: ai_client.py  api_factory.py  azure_openai_client.py  azure_openai_client1.py  playwright_factory.py
src/framework/contracts/: ai_client_contract.py  locator_contract.py  locator_contract_new.py
src/framework/core/ai/prompt_registry/: locator_heal.txt
src/framework/core/config/: models.py  variables.py
src/framework/core/exceptions/: exceptions.py
src/framework/core/governance/: locator_validator.py
src/framework/core/observability/logger_config/: log_setup.py  logger_v1.py  logger_v2.py
src/framework/core/plugins/: performance.py
src/framework/core/quality/assertions/: assert_api.py  assert_evidence.py  assert_web.py
src/framework/core/utils/: utils_date.py  utils_file.py  utils_generic.py  utils_loader.py  utils_path.py  utils_string.py  utils_yaml_generator.py
src/framework/domains/api/: auth.py  client.py  retry.py
src/framework/domains/web/: base_page.py
src/framework/domains/web/locators/: locator_actions.py  locator_contract.py  locator_resolver.py
src/framework/domains/web/locators_repository/: inventory.yaml  inventoryitem.yaml  inventorylist.yaml  loginpage.yaml  loginpage1.yaml
src/framework/domains/web/pages/: inventoryitem.py  inventorylist.py  login.py
src/framework/services/: locator_healing_service.py
tests/: conftest.py
tests/api/: test_api.py
tests/poc/: test_hello.py  test_web.py
